CSS/indexextra.css
html {
    background-color: #5A5A5A;
}
.a1creator-songbox-tablerow {
    margin: 12px;
    padding: 12px;
    text-align: left;
    background-size: contain;
}
a, h2, .no-text-decoration, .no-text-decoration:hover, .no-text-decoration:link, .no-text-decoration:visited, .no-text-decoration:active {
    text-decoration: none!important;
    box-shadow: none;
}

/*on mobile*/
@media (max-width: 767px) {
    .nospacebetweencells {
        border-spacing: 0 0px;
    }
    .a1creator-title {
        align-content: normal;
        vertical-align: middle;
        color: white;
        padding: 0 1.4rem 0.4rem 1.4rem;
    }
    .a1creator-subtext {
        align-content: normal;
        vertical-align: middle;
        color: ghostwhite;
        padding: 0 1.4rem 1.4rem 1.4rem;
    }
    .a1creator-songbox {
        padding-top: 1rem;
        padding-bottom: 1rem;
    }
    .a1creator-a1games-tab {
        position: absolute;
        display: table;
        overflow: hidden;
        left: 100%;
        transition: .5s ease;
        top: 50%;
        bottom: 0;
        opacity: 100%
    }
    .a1creator-a1gamesicon {
        height: 44px;
        width: 44px;
        padding: 1px 2px;
        border-radius: 8px;
    }
}
/*on desktop*/
@media (min-width: 767px) {
    .nospacebetweencells {
        border-spacing: 0 24px;
    }
    .a1creator-title {
        align-content: normal;
        text-decoration: none;
        vertical-align: middle;
        color: white;
        padding: 0.4rem;
    }
    .a1creator-subtext {
        align-content: normal;
        vertical-align: middle;
        color: ghostwhite;
        padding: 0.4rem;
        word-wrap: break-word;
    }
    .a1creator-songbox {
        padding-top: 24px;
        padding-bottom: 24px;
    }
    .a1creator-a1games-tab {
        position: absolute;
        display: table;
        overflow: hidden;
        left: 100%;
        transition: .5s ease;
        top: 50%;
        bottom: 0;
        opacity: 50%
    }
    .a1creator-a1gamesicon {
        height: 64px;
        width: 64px;
        padding: 0 0;
        border-radius: 12px;
    }
}

.a1creator-overlay {
    opacity: 0;
    transition: 0.5s ease;
}
.a1creator-overlay:hover {
    opacity: 1;
}
.absolute-right-and-center {
    -moz-transform: translate(-30%, -50%);
    -ms-transform: translate(-30%, -50%);
    -webkit-transform: translate(-30%, -50%);
    -o-transform: translate(-30%, -50%);
    transform: translate(-30%, -50%);
}
.absolute-right-and-center:hover {
    transform: translate(-100%, -50%);
    -moz-transform: translate(-100%, -50%);
    -ms-transform: translate(-100%, -50%);
    -webkit-transform: translate(-100%, -50%);
    -o-transform: translate(-100%, -50%);
}
.a1creator-a1games-tab:hover {
    left: 100%;
    opacity: 100%;
}

